--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
         .canasta:hover .pelota.b{
             right: calc(50% - 100px);
         }
+		
+		.canasta {
+            border: 1px solid black;
+            position: relative;
+            height: 200px;
+            /*transform: rotar | sesgar | position | tamaño;*/
+            transform: rotate(5deg) skew(10deg) translate(100px) scale(1.5);
+        }
+        .canasta:hover .pelota.a{
+            left: calc(50% - 100px);
+        }
+
+        .canasta:hover .pelota.b{
+            right: calc(50% - 100px);
+        }
     </style>
 </head>
 <body>
