--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         }
 
         .container:hover .cuadrado{
-            /*transform: translate(x,y);*/
-            transform: translateZ(100px);
-            /*transform: translate3d(x,y,z)*/
-            transform: translate3d(-100px, -100px, -100px);
+
+            /*transform: scale(x,y);*/
+            /*ransform: scale(0 = 0% del tamanio - 1 = 100% del tamanio)*/
+            /*transform: (2, .5);*/
+            transform: scale(.5);
         }
 
         .cuadrado {
