--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transformaciones de rotación</title>
+    <title>Transformaciones de sesgado</title>
     <style>
         body {
             display: flex;
@@ -23,10 +23,8 @@
 
         .container:hover .cuadrado{
 
-            /*transform: scale(x,y);*/
-            /*ransform: scale(0 = 0% del tamanio - 1 = 100% del tamanio)*/
-            /*transform: (2, .5);*/
-            transform: scale(.5);
+            /*transform: skew(x,y);*/
+            transform: skew(10deg,10deg);
         }
 
         .cuadrado {
