Acelaracion y curva de Bezier

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
             animation-duration: 2s;
             /*animation-delay: 1s;*/
             animation-iteration-count: infinite;
-            animation-timing-function: ease;
-            /*animation-timing-function: cubic-bezier(1,1,1,1);*/
+            /*animation-timing-function: ease-in-out;*/
+            animation-timing-function: linear;
+            /*animation-timing-function: steps(10);*/
+            /*animation-timing-function: steps(60);*/
+            animation-timing-function: cubic-bezier(1,1,1,1);
             animation-direction: alternate;
             /*animation-fill-mode: forwards;*/
             position: relative;
