--- a/index.html
+++ b/index.html
@@ -29,17 +29,11 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            animation-name: cuadrado;
-            animation-duration: 2s;
-            /*animation-delay: 1s;*/
+            animation-name: cuadrado, rebote;
+            animation-duration: 2s, .3s;
             animation-iteration-count: infinite;
-            /*animation-timing-function: ease-in-out;*/
-            animation-timing-function: linear;
-            /*animation-timing-function: steps(10);*/
-            /*animation-timing-function: steps(60);*/
-            animation-timing-function: cubic-bezier(1,1,1,1);
+            animation-timing-function: linear,ease-in-out;
             animation-direction: alternate;
-            /*animation-fill-mode: forwards;*/
             position: relative;
         }
 
@@ -51,6 +45,15 @@
             100%{
                 /*opacity: 0;*/
                 left: calc(100% - 240px);
+            }
+        }
+
+        @keyframes rebote {
+            from {
+                transform: translateY(0);
+            }
+            to {
+                transform:  translateY(100px) scale(1,.8);
             }
         }
 
