--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animaciones CSS</title>
+    <title>Animaciones CSS will-change </title>
     <style>
         body {
             display: flex;
@@ -29,12 +29,17 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            animation-name: cuadrado, rebote;
-            animation-duration: 2s, 3s;
             animation-iteration-count: infinite,20 ;
             animation-timing-function: linear,ease-in-out;
             animation-direction: alternate;
             position: relative;
+            transition: 3s;
+            will-change: opacity, transform;
+        }
+
+        .cuadrado:hover {
+            opacity: 0;
+            transform: scale(1.1);
         }
 
         @keyframes cuadrado {
