--- a/index.html
+++ b/index.html
@@ -3,62 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animaciones Web Interacciones</title>
+    <title>JavaScript element.animate</title>
     <style>
-        .pelota {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            background-color: red;
-            /*transition-property: width;
-            transition-duration: 1s;
-            transition-delay: 1s;
-            transition-timing-function: ease;*/
-            transition: width 1s 1s ease;
+        body {
+            display: flex;
+            height: 100vh;
+            align-items: center;
+            justify-content: center;
         }
-		
-		      }
-        .pelota.a{
-            background: red;
-            left: 0;
+
+        .container {
+            width: 600px;
+            border: 1px solid red;
         }
-        .pelota.b{
+        .pelota{
+            width: 200px;
+            height: 200px;
             background: black;
-            right: 0;
-        }
-        .canasta {
-            border: 1px solid black;
-            position: relative;
-            height: 200px;
-        }
-        .canasta:hover .pelota.a{
-            left: calc(50% - 100px);
-        }
-
-        .canasta:hover .pelota.b{
-            right: calc(50% - 100px);
-        }
-		
-		.canasta {
-            border: 1px solid black;
-            position: relative;
-            height: 200px;
-            /*transform: rotar | sesgar | position | tamaño;*/
-            transform: rotate(5deg) skew(10deg) translate(100px) scale(1.5);
-        }
-        .canasta:hover .pelota.a{
-            left: calc(50% - 100px);
-        }
-
-        .canasta:hover .pelota.b{
-            right: calc(50% - 100px);
+            border-radius: 50%;
         }
     </style>
 </head>
 <body>
-	  <div class="canasta">
-        <div class="pelota a"></div>
-        <div class="pelota b"></div>
+	<div class="container">
+        <div class="pelota" id="pelota"></div>
     </div>
+
+    <script>
+        const $pelota = document.getElementById('pelota')
+        /*element.animate(keyframes = [], option= {})*/
+        $pelota.animate([
+            {
+                transform: 'translateX(0)'
+            },  
+            {
+                transform: 'translateX(600px)'
+            }
+        ], {
+            duration: 1000,
+            delay: 1000,
+            direction: 'normal',
+            easing: 'linear',
+            iterations: Infinity,
+            fill: 'forwards',
+            iterationStart: .5
+        })
+
+    </script>
 </body>
 </html>
