--- a/index.html
+++ b/index.html
@@ -22,22 +22,49 @@
             background: black;
             border-radius: 50%;
         }
+
+        .btn {
+            text-align: center;
+            background: #7dc800;
+            padding: .6em .8em;
+            border: none;
+            color: white;
+            margin: 5px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 26px;
+            box-shadow: inset 0 -.2em rgba(0, 0, 0, .2);
+            outline: 0;
+            transition: .2s;
+            will-change: transform;
+        }
+
+        .btn:active {
+            transform: scale(.8);
+        }
+
     </style>
 </head>
 <body>
 	<div class="container">
         <div class="pelota" id="pelota"></div>
+        <div class="buttons">
+            <button class="btn"id="play">Play</button>
+            <button class="btn"id="pause">Pause</button>
+            <button class="btn"id="stop" >Stop</button>
+            <button class="btn" id="reverse" >Reverse</button>
+        </div>
     </div>
 
     <script>
         const $pelota = document.getElementById('pelota')
         /*element.animate(keyframes = [], option= {})*/
-        $pelota.animate([
+        const animation = $pelota.animate([
             {
                 transform: 'translateX(0)'
             },  
             {
-                transform: 'translateX(600px)'
+                transform: 'translateX(400px)'
             }
         ], {
             duration: 1000,
@@ -49,6 +76,23 @@
             iterationStart: .5
         })
 
+        const $playButton = document.getElementById('play')
+        const $pauseButton = document.getElementById('pause')
+        const $stopButton = document.getElementById('stop')
+        const $reverseButton = document.getElementById('reverse')
+
+        $playButton.addEventListener('click', (event) => {
+            animation.play()
+        })
+        $pauseButton.addEventListener('click', (event) => {
+            animation.pause();
+        })
+        $stopButton.addEventListener('click', (event) => {
+            animation.cancel();
+        })
+        $reverseButton.addEventListener('click', (event) => {
+            animation.reverse();
+        })
     </script>
 </body>
 </html>
