--- a/index.html
+++ b/index.html
@@ -5,60 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animaciones Web Interacciones</title>
     <style>
-        .pelota {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            background-color: red;
-            /*transition-property: width;
-            transition-duration: 1s;
-            transition-delay: 1s;
-            transition-timing-function: ease;*/
-            transition: width 1s 1s ease;
-        }
-		
-		      }
-        .pelota.a{
-            background: red;
-            left: 0;
-        }
-        .pelota.b{
-            background: black;
-            right: 0;
-        }
-        .canasta {
-            border: 1px solid black;
-            position: relative;
-            height: 200px;
-        }
-        .canasta:hover .pelota.a{
-            left: calc(50% - 100px);
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background: #234050;
         }
 
-        .canasta:hover .pelota.b{
-            right: calc(50% - 100px);
-        }
-		
-		.canasta {
-            border: 1px solid black;
-            position: relative;
+        .platzi {
+            width: 200px;
             height: 200px;
-            /*transform: rotar | sesgar | position | tamaño;*/
-            transform: rotate(5deg) skew(10deg) translate(100px) scale(1.5);
-        }
-        .canasta:hover .pelota.a{
-            left: calc(50% - 100px);
+            position: relative;
+            margin: 40px auto;
+            transform: rotate(45deg);
         }
 
-        .canasta:hover .pelota.b{
-            right: calc(50% - 100px);
+        .platzi-left {
+            width: 82%;
+            height: 65%;
+            border: 30px solid #97c93e;
+            border-radius: 20px 20px 0 0;
+            border-bottom: none;
+            box-sizing: border-box;
+            position: relative;
+            top:1px;
+        }
+
+        .platzi-right {
+            width: 100%;
+            height: 35%;
+            border: 30px solid #97c93e;
+            border-radius: 0 0 20px 20px ;
+            border-top: none;
+            box-sizing: border-box;
         }
     </style>
 </head>
 <body>
-	  <div class="canasta">
-        <div class="pelota a"></div>
-        <div class="pelota b"></div>
+	  <div class="platzi">
+        <div class="platzi-left"></div>
+        <div class="platzi-right"></div>
     </div>
 </body>
 </html>
