--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
             position: relative;
             margin: 40px auto;
             transform: rotate(45deg);
+            animation-name: platzi-base;
+            animation-duration: 3.5s;
+            animation-iteration-count: infinite;
         }
 
         .platzi-left {
-            width: 82%;
+            width: 100%;
             height: 65%;
             border: 30px solid #97c93e;
             border-radius: 20px 20px 0 0;
@@ -30,6 +33,10 @@
             box-sizing: border-box;
             position: relative;
             top:1px;
+            animation-name: platzi-left;
+            animation-duration: 3.5s;
+            animation-delay: 1s;
+            animation-iteration-count: infinite;
         }
 
         .platzi-right {
@@ -39,6 +46,43 @@
             border-radius: 0 0 20px 20px ;
             border-top: none;
             box-sizing: border-box;
+        }
+
+        @keyframes platzi-base {
+            0% {
+                opacity: 0;
+                transform: scale(.3) rotate(0deg);
+            }
+            30% {
+                opacity: 1;
+                transform: scale(1.8) rotate(405deg);
+            }
+            80% {
+                opacity: 1;
+                transform: scale(1.8) rotate(405deg);
+            }
+            100% {
+                opacity: 0;
+                transform: scale(.3) rotate(0deg);
+            }
+        }
+
+        @keyframes platzi-left {
+            0% {
+                width: 100%;
+            }
+            20% {
+                width: 80%;
+            }
+            50% {
+                width: 80%;
+            }
+            60%{
+                width: 100%;
+            }
+            100%{
+                width: 100%;
+            }
         }
     </style>
 </head>
