--- a/index.html
+++ b/index.html
@@ -3,123 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animaciones de Entrada y Salida</title>
+    <title>Twitter Like</title>
     <style>
         body {
             display: flex;
+            height: 100vh;
             align-items: center;
             justify-content: center;
             background: #234050;
             margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            flex-direction: column;
         }
-        .btn {
-            text-align: center;
-            padding: .6em .8em;
-            border: none;
-            color: white;
-            background: lightgray;
-            margin: 5px;
-            border-radius: 5px;
+        .like{
             cursor: pointer;
-            font-size: 15px;
-            box-shadow: inset 0 -.2em rgba(0, 0, 0, .2);
-            outline: 0;
-            transition: .2s;
-            will-change: transform;
-        }
-        .btn:active {
-            transform: scale(.8);
-        }
-        .btn.primary {
-            background: #7dc800;
-        }
-        .btn.warning {
-            background: #ff463b;
-        }
-        .overlay{
-            background: rgba(0, 0, 0, .5);
-            position: fixed;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: 2s ease-in;
-            opacity: 0;
-            visibility: hidden;
-        }
-        .overlay.active {
-            opacity: 1;
-            visibility: visible;
-        }
-        .modal {
-            width: 500px;
-            background: white;
-            /*animation: name time estado;*/
-            animation: modalIn 2s forwards;
-            padding: 2em;
-            border-radius: .5em;
-            text-align: center;
+            width: 50px;
+            height: 50px;
+            background-image: url('corazon.png');
+            background-repeat: no-repeat;
+            background-size: 1450px 50px;
         }
 
-        @keyframes modalIn {
-            0%{
-                transform: translateY(-3000px);
-            }
-            60%{
-                transform: translateY(25px);
-            }
-            75%{
-                transform: translateY(-20px);
-            }
-            90%{
-                transform: translateY(5px);
-            }
+        .like.is-liked {
+            animation-name: like;
+            animation-duration: 1s;
+            animation-timing-function: steps(28);
+            /*background-position: -2800p 0;*/
+            /*background-position: right;*/
+            animation-fill-mode: forwards;
         }
 
-        @keyframes  modalOut {
+        @keyframes like {
             0%{
-                transform: translateY(5px);
-            }
-            60%{
-                transform: translateY(-20px);
-            }
-            75%{
-                transform: translateY(25px);
+                background-position: 0 0;
             }
             100%{
-                transform: translateY(-3000px);
+                /*background-position: -2800px 0;*/
+                background-position: right;
             }
         }
+
     </style>
 </head>
 <body>
-    <img src="platzi.png" alt="">
-    <div class="overlay active" id="overlay">
-        <div class="modal" id="modal">
-            <h1>Aviso</h1>
-            <p>ventana modal</p>
-            <div class="modal-buttons">
-                <button class="btn primary" id="hide-modal">Si</button>
-                <button class="btn warning">No</button>
+    <div class="tweet-box">
+        <div class="like" id="like">
             </div>
         </div>
     </div>
 
     <script>
-        const $overlay = document.getElementById('overlay')
-        const $modal = document.getElementById('modal')
-        const $hideButton = document.getElementById('hide-modal');
-        
-        $hideButton.addEventListener('click', (event) => {
-            //console.log(event)
-            $modal.style.animation = 'modalOut .8s forwards'
-            $overlay.classList.remove('active')
-        });
+        const $like = document.getElementById('like');
+        $like.addEventListener('click', (event) => {
+            $like.classList.toggle('is-liked');
+        })
     </script>
 </body>
 </html>
