--- a/index.html
+++ b/index.html
@@ -3,58 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twitter Like</title>
+    <title>Notificacion</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         body {
+            background-image: url('platzi.png');
+            background-size: 100%;
+            height: 200vh;
+            margin:0
+        }
+        .header {
+            background: #1d3644;
             display: flex;
-            height: 100vh;
+            height: 80px;
+            justify-content: flex-end;
+            padding: 20px 150px;
+        }
+        .notification {
+            color: white;
+            width: 50px;
+            height: inherit;
+            display: flex;
             align-items: center;
             justify-content: center;
-            background: #234050;
-            margin: 0;
+            position: relative;
         }
-        .like{
+
+        .notification:before {
+            content:"\f0f3";
+            font-family: "FontAwesome";
+            display: block;
+            font-size: 50px;
+        }
+
+        .notification:after {
+            content: "1";
+            font-size: 11px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-width: 20px;
+            height: 20px;
+            background: #ff4600;
+            border-radius: 50%;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 20px;
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        .btn {
+            text-align: center;
+            background: #7dc800;
+            padding: .6em .8em;
+            border: none;
+            color: white;
+            margin: 5px;
+            margin-right: 50px;
+            border-radius: 5px;
             cursor: pointer;
-            width: 50px;
-            height: 50px;
-            background-image: url('corazon.png');
-            background-repeat: no-repeat;
-            background-size: 1450px 50px;
+            font-size: 26px;
+            box-shadow: inset 0 -.2em rgba(0, 0, 0, .2);
+            outline: 0;
+            transition: .2s;
+            will-change: transform;
         }
-
-        .like.is-liked {
-            animation-name: like;
-            animation-duration: 1s;
-            animation-timing-function: steps(28);
-            /*background-position: -2800p 0;*/
-            /*background-position: right;*/
-            animation-fill-mode: forwards;
-        }
-
-        @keyframes like {
-            0%{
-                background-position: 0 0;
-            }
-            100%{
-                /*background-position: -2800px 0;*/
-                background-position: right;
-            }
+        .btn:active {
+            transform: scale(.8);
         }
 
     </style>
 </head>
 <body>
-    <div class="tweet-box">
-        <div class="like" id="like">
-            </div>
-        </div>
-    </div>
-
-    <script>
-        const $like = document.getElementById('like');
-        $like.addEventListener('click', (event) => {
-            $like.classList.toggle('is-liked');
-        })
-    </script>
+    <header class="header">
+        <button class="btn primary">Enviar Not</button>
+        <div class="notification"></div>
+    </header>
 </body>
 </html>
