--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
             font-size: 50px;
         }
 
+        .notification.notify:before{
+            animation-name: bell;
+            animation-duration: 2s;
+            animation-timing-function: ease-out;
+        }
+
         .notification:after {
-            content: "1";
             font-size: 11px;
             font-weight: bold;
             display: flex;
@@ -52,8 +57,18 @@
             position: absolute;
             top: 0;
             right: 0;
+            content: attr(data-count);
+            opacity: 0;
+            transition: .3s;
+            transform: scale(.5);
+            will-change: opacity;
+            transform-origin: center top;
         }
 
+        .notification.show-count:after {
+            opacity: 1;
+            transform: scale(1);
+        }
         .btn {
             text-align: center;
             background: #7dc800;
@@ -74,12 +89,56 @@
             transform: scale(.8);
         }
 
+        @keyframes bell {
+            0%{
+                transform: rotate(35deg);
+            }
+            12.5%{
+                transform: rotate(-35deg);
+            }
+            25%{
+                transform: rotate(20deg);
+            }
+            37.5%{
+                transform: rotate(-20deg);
+            }
+            50%{
+                transform: rotate(15deg);
+            }
+            62.5%{
+                transform: rotate(-10deg);
+            }
+            75%{
+                transform: rotate(5deg);
+            }
+            100%{
+                transform: rotate(0deg);
+            }
+        }
+
     </style>
 </head>
 <body>
     <header class="header">
-        <button class="btn primary">Enviar Not</button>
-        <div class="notification"></div>
+        <button class="btn primary" id="button">Enviar Not</button>
+        <div class="notification" id="notification"></div>
     </header>
+
+    <script>
+        const $button = document.getElementById('button')
+        const $bell = document.getElementById('notification')
+
+        $button.addEventListener('click', (event) => {
+            const count = Number($bell.getAttribute('data-count')) || 0
+            $bell.setAttribute('data-count',count + 1)
+            $bell.classList.add('show-count')
+            $bell.classList.add('notify')
+        })
+
+        $bell.addEventListener('animationend',() => {
+            $bell.classList.remove('notify')
+        })
+
+    </script>
 </body>
 </html>
