--- a/index.html
+++ b/index.html
@@ -3,142 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notificacion</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Wave</title>
     <style>
-        body {
-            background-image: url('platzi.png');
-            background-size: 100%;
-            height: 200vh;
-            margin:0
-        }
-        .header {
-            background: #1d3644;
-            display: flex;
-            height: 80px;
-            justify-content: flex-end;
-            padding: 20px 150px;
-        }
-        .notification {
-            color: white;
-            width: 50px;
-            height: inherit;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-        }
-
-        .notification:before {
-            content:"\f0f3";
-            font-family: "FontAwesome";
-            display: block;
-            font-size: 50px;
-        }
-
-        .notification.notify:before{
-            animation-name: bell;
-            animation-duration: 2s;
-            animation-timing-function: ease-out;
-        }
-
-        .notification:after {
-            font-size: 11px;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-width: 20px;
-            height: 20px;
-            background: #ff4600;
-            border-radius: 50%;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 20px;
-            position: absolute;
-            top: 0;
-            right: 0;
-            content: attr(data-count);
-            opacity: 0;
-            transition: .3s;
-            transform: scale(.5);
-            will-change: opacity;
-            transform-origin: center top;
-        }
-
-        .notification.show-count:after {
-            opacity: 1;
-            transform: scale(1);
-        }
-        .btn {
-            text-align: center;
-            background: #7dc800;
-            padding: .6em .8em;
-            border: none;
-            color: white;
-            margin: 5px;
-            margin-right: 50px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 26px;
-            box-shadow: inset 0 -.2em rgba(0, 0, 0, .2);
-            outline: 0;
-            transition: .2s;
-            will-change: transform;
-        }
-        .btn:active {
-            transform: scale(.8);
-        }
-
-        @keyframes bell {
-            0%{
-                transform: rotate(35deg);
-            }
-            12.5%{
-                transform: rotate(-35deg);
-            }
-            25%{
-                transform: rotate(20deg);
-            }
-            37.5%{
-                transform: rotate(-20deg);
-            }
-            50%{
-                transform: rotate(15deg);
-            }
-            62.5%{
-                transform: rotate(-10deg);
-            }
-            75%{
-                transform: rotate(5deg);
-            }
-            100%{
-                transform: rotate(0deg);
-            }
-        }
-
     </style>
 </head>
 <body>
-    <header class="header">
-        <button class="btn primary" id="button">Enviar Not</button>
-        <div class="notification" id="notification"></div>
-    </header>
-
     <script>
-        const $button = document.getElementById('button')
-        const $bell = document.getElementById('notification')
-
-        $button.addEventListener('click', (event) => {
-            const count = Number($bell.getAttribute('data-count')) || 0
-            $bell.setAttribute('data-count',count + 1)
-            $bell.classList.add('show-count')
-            $bell.classList.add('notify')
-        })
-
-        $bell.addEventListener('animationend',() => {
-            $bell.classList.remove('notify')
-        })
-
     </script>
 </body>
 </html>
