--- a/index.html
+++ b/index.html
@@ -5,9 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wave</title>
     <style>
+        body {
+            margin: 0;
+        }
+        .container {
+            position: relative;
+            height: 500px;
+            background: #0f9bf6;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .content {
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+            font-size: 2em;
+            color: rgba(255, 255, 255,.7)
+        }
+        .waves {
+            position: absolute;
+            /*left: 0;
+            right: 0;
+            height: 200px;
+            bottom: 0;*/
+            bottom: -135px;
+            height: 527px;
+            width: 100%;
+            overflow: hidden;
+        }
+        .wave {
+            position: absolute;
+            left: -180px;
+            bottom: 0;
+            width: 2402px;
+            height: 427px;
+            background: url('waves.png') center bottom no-repeat;
+            background-size: 100%;
+            animation: 3s wave ease-in-out infinite alternate;
+        }
+        .wave.a {
+            background-position: 0 -854px;
+        }
+        .wave.b {
+            background-position: 0 -427px;
+            animation-delay: .6s;
+        }
+        .wave.c {
+            background-position: 0 0;
+            animation-delay: 1.2s;
+        }
+
+        @keyframes wave {
+            0%{
+                transform: translateX(0) translateY(0);
+            }
+            50%{
+                transform: translate(-80px, 30px);
+            }
+            100%{
+                transform: translate(160px,-60px);
+            }
+        }
     </style>
 </head>
 <body>
+    <div class="container">
+        <div class="content">
+            <h1>Animaciones Web</h1>
+        </div>
+        <div class="waves">
+            <div class="wave a"></div>
+            <div class="wave b"></div>
+            <div class="wave c"></div>
+        </div>
+    </div>
     <script>
     </script>
 </body>
